--- a/app/src/main/res/layouts/fragment/layout/fragment_main.xml
+++ b/app/src/main/res/layouts/fragment/layout/fragment_main.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:padding="@dimen/activity_horizontal_margin">
+             android:layout_height="match_parent">
+
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/black">
+
+        <com.mobiledevpro.smcamera.AutoFitTextureView
+            android:id="@+id/camera_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+    </FrameLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Main fragment"/>
-</FrameLayout>
+        android:layout_centerInParent="true"
+        android:textColor="@color/colorWindowBackground"
+        android:text="Camera loading..."/>
+
+</RelativeLayout>
