--- a/app/src/main/res/layouts/fragment/layout/fragment_main.xml
+++ b/app/src/main/res/layouts/fragment/layout/fragment_main.xml
@@ -13,8 +13,23 @@
             android:id="@+id/camera_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"/>
+            android:layout_gravity="center"/>
     </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/btn_aspect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_button_aspect_selector"
+            android:contentDescription="@null"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv_camera_loading"
@@ -29,8 +44,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
-        android:padding="@dimen/activity_horizontal_margin"
-        android:animateLayoutChanges="true">
+        android:animateLayoutChanges="true"
+        android:padding="@dimen/activity_horizontal_margin">
 
         <ImageButton
             android:id="@+id/btn_record_start_stop"
