--- a/app/src/main/res/layouts/fragment/layout/fragment_main.xml
+++ b/app/src/main/res/layouts/fragment/layout/fragment_main.xml
@@ -4,7 +4,7 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/black">
 
-
+    <!-- camera preview -->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -16,6 +16,7 @@
             android:layout_gravity="center"/>
     </FrameLayout>
 
+    <!-- top buttons -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,6 +41,7 @@
         android:textColor="@color/colorWindowBackground"
         android:textSize="16sp"/>
 
+    <!-- capture buttons -->
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -55,6 +57,15 @@
             android:layout_centerVertical="true"
             android:background="@drawable/background_button_record_selector"
             android:contentDescription="@null"/>
+
+        <ImageButton
+            android:layout_marginBottom="16dp"
+            android:id="@+id/btn_take_picture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_button_take_photo"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"/>
 
     </RelativeLayout>
 
