Change aspect ration (16:9 or 4:3)

--- a/app/src/main/res/layouts/fragment/layout/fragment_main.xml
+++ b/app/src/main/res/layouts/fragment/layout/fragment_main.xml
@@ -43,6 +43,7 @@
 
     <!-- capture buttons -->
     <RelativeLayout
+        android:id="@+id/layout_capture_buttons"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
