--- a/app/src/main/res/layouts/fragment/layout/fragment_main.xml
+++ b/app/src/main/res/layouts/fragment/layout/fragment_main.xml
@@ -14,7 +14,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
+
     </FrameLayout>
+
+    <com.mobiledevpro.smcamera.MeteringAreaView
+        android:id="@+id/metering_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <!-- top buttons -->
     <LinearLayout
